--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "core-js": "3.6.5",
+    "core-js": "^3.18.3",
     "dayjs": "^1.11.3",
     "echarts": "^5.3.3",
     "element-ui": "2.13.2",
